refactor: added id type to quest service